--- a/Moeller/HTML/our-services.html
+++ b/Moeller/HTML/our-services.html
@@ -41,303 +41,303 @@
   </div>
 </nav>
 <div id="mainContainer">
-<div id="BannerContainer">
-  <h1>Our Services</h1>
-</div>
-<div class="div-one"></div>
-<div id="membershipContainer">
-  <div id="memberHeader"> <img id="memberLogo" src="../images/noTextLogoWhite.png">
-    <h2 >Single projects or year round service;<br>
-      Either way, we've got you covered.</h2>
+  <div id="BannerContainer">
+    <h1>Our Services</h1>
   </div>
-  <div id="innerMembership">
-    <div id="card1" class="membershipCard">
-      <div id="cardImage1">
-        <h3>Standalone Services</h3>
+  <div class="div-one"></div>
+  <div id="membershipContainer">
+    <div id="memberHeader"> <img id="memberLogo" src="../images/noTextLogoWhite.png">
+      <h2 >Single projects or year round service;<br>
+        Either way, we've got you covered.</h2>
+    </div>
+    <div id="innerMembership">
+      <div id="card1" class="membershipCard">
+        <div id="cardImage1">
+          <h3>Standalone Services</h3>
+        </div>
+        <ul>
+          <li>A La Carte Services</li>
+          <li>Access to Licensed & Insured Subtractors</li>
+          <li>No Commitment</li>
+        </ul>
+        <a href="option1" align="center" class="btnContain">
+        <button onclick="jump()" class="svcButton">View Services</button>
+        </a> </div>
+      <div id="card2" class="membershipCard">
+        <div id="cardImage2">
+          <h3>Moeller Home Membership</h3>
+        </div>
+        <ul>
+          <li>24/7 One-Call Service </li>
+          <li>Recurring Services Scheduling</li>
+          <li>Access to Licensed & Insured Subtractors</li>
+          <li>Consolidated Monthly Invoices</li>
+          <li>Monthly Walk-Through Inspection</li>
+          <li>Priority Appointment Scheduling</li>
+          <li>Lock and Leave Service</li>
+          <li>Light Bulb Replacement Labor</li>
+          <li>HVAC Filter Replacement Labor</li>
+          <li>Full Service Property Management</li>
+        </ul>
+        <a align="center" href="option1" class="btnContain">
+        <button onclick="jump()" class="svcButton">View Services</button>
+        </a> </div>
+    </div>
+  </div>
+  <div id="HPA">
+    <div id="innerHPA">
+      <h2>Let's Begin with our <b>Home Physical Analysis:</b></h2>
+      <p>Comprehensive Interior and exterior home and property inspection to identify areas of concern and develop a plan to prioritize issues and prevent expensive future repairs.</p>
+    </div>
+  </div>
+  <div class="service" id="option1">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Preventative Maintenance & Repair</h1>
+        <ul>
+          <li>HVAC</li>
+          <li>General Carpentry</li>
+          <li>Electrical</li>
+          <li>Plumbing Appliances</li>
+          <li>Roofing </li>
+          <li>Wallpaper </li>
+          <li>Paint </li>
+          <li>Flooring </li>
+          <li>Fence </li>
+          <li>Generator </li>
+        </ul>
       </div>
-      <ul>
-        <li>A La Carte Services</li>
-        <li>Access to Licensed & Insured Subtractors</li>
-        <li>No Commitment</li>
-      </ul>
-      <a href="option1" align="center" class="btnContain">
-      <button onclick="jump()" class="svcButton">View Services</button>
-      </a> </div>
-    <div id="card2" class="membershipCard">
-      <div id="cardImage2">
-        <h3>Moeller Home Membership</h3>
+      <div class="innerServiceImg" id="repairImg"></div>
+    </div>
+  </div>
+  <div class="service" id="option2">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Remodeling</h1>
+        <ul>
+          <li>Kitchen</li>
+          <li>Bathroom</li>
+          <li>Rec Room</li>
+          <li>Wine Cellars</li>
+          <li>Engineering</li>
+          <li>Architectural</li>
+          <li>Water Damage</li>
+          <li>Mold Remediation</li>
+        </ul>
       </div>
-      <ul>
-        <li>24/7 One-Call Service </li>
-        <li>Recurring Services Scheduling</li>
-        <li>Access to Licensed & Insured Subtractors</li>
-        <li>Consolidated Monthly Invoices</li>
-        <li>Monthly Walk-Through Inspection</li>
-        <li>Priority Appointment Scheduling</li>
-        <li>Lock and Leave Service</li>
-        <li>Light Bulb Replacement Labor</li>
-        <li>HVAC Filter Replacement Labor</li>
-        <li>Full Service Property Management</li>
-      </ul>
-      <a align="center" href="option1" class="btnContain">
-      <button onclick="jump()" class="svcButton">View Services</button>
-      </a> </div>
-  </div>
-</div>
-	<div id="HPA">
-		<div id="innerHPA">
-	<h2>Let's Begin with our <b>Home Physical Analysis:</b></h2>
-	<p>Comprehensive Interior and exterior home and property inspection to identify areas of concern and develop a plan to prioritize issues and prevent expensive future repairs.</p>
-	</div></div>
-	
-	
-<div class="service" id="option1">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Preventative Maintenance & Repair</h1>
-      <ul>
-        <li>HVAC</li>
-        <li>General Carpentry</li>
-        <li>Electrical</li>
-        <li>Plumbing Appliances</li>
-        <li>Roofing </li>
-        <li>Wallpaper </li>
-        <li>Paint </li>
-        <li>Flooring </li>
-        <li>Fence </li>
-        <li>Generator </li>
-      </ul>
+      <div class="innerServiceImg" id="remodelingImg"></div>
     </div>
-    <div class="innerServiceImg" id="repairImg"></div>
   </div>
-</div>
-<div class="service" id="option2">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Remodeling</h1>
-      <ul>
-        <li>Kitchen</li>
-        <li>Bathroom</li>
-        <li>Rec Room</li>
-        <li>Wine Cellars</li>
-        <li>Engineering</li>
-        <li>Architectural</li>
-        <li>Water Damage</li>
-        <li>Mold Remediation</li>
-      </ul>
+  <div class="service" id="option3">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Interior Design</h1>
+        <ul>
+          <li>Space Planning</li>
+          <li>Furniture</li>
+          <li>Accents</li>
+          <li>Artwork</li>
+          <li>Finish Selections</li>
+          <li>Furniture Design</li>
+          <li>Window Treatments</li>
+          <li>Bedrooms</li>
+          <li>Kitchen</li>
+          <li>Bath</li>
+          <li>Rec Room</li>
+        </ul>
+      </div>
+      <div class="innerServiceImg" id="InteriorImg"></div>
     </div>
-    <div class="innerServiceImg" id="remodelingImg"></div>
   </div>
-</div>
-<div class="service" id="option3">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Interior Design</h1>
-      <ul>
-        <li>Space Planning</li>
-        <li>Furniture</li>
-        <li>Accents</li>
-        <li>Artwork</li>
-        <li>Finish Selections</li>
-        <li>Furniture Design</li>
-        <li>Window Treatments</li>
-        <li>Bedrooms</li>
-        <li>Kitchen</li>
-        <li>Bath</li>
-		  <li>Rec Room</li>
-      </ul>
+  <div class="service" id="option4">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Doors, Windows, & Siding</h1>
+        <ul>
+          <li>Repair and Replace</li>
+          <li>Gutters</li>
+          <li>Roofing</li>
+          <li>Siding</li>
+          <li>Windows</li>
+          <li>Garage Doors</li>
+          <li>Masonry</li>
+          <li>Stucco</li>
+          <li>Chimney Repair</li>
+        </ul>
+      </div>
+      <div class="innerServiceImg" id="DoorImg"></div>
     </div>
-    <div class="innerServiceImg" id="InteriorImg"></div>
   </div>
-</div>
-<div class="service" id="option4">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Doors, Windows, & Siding</h1>
-      <ul>
-        <li>Repair and Replace</li>
-        <li>Gutters</li>
-        <li>Roofing</li>
-        <li>Siding</li>
-        <li>Windows</li>
-        <li>Garage Doors</li>
-        <li>Masonry</li>
-        <li>Stucco</li>
-        <li>Chimney Repair</li>
-      </ul>
+  <div class="service" id="option5">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Painting & Staining</h1>
+        <ul>
+          <li>Interior</li>
+          <li>Exterior</li>
+          <li>Drywall repair</li>
+          <li>Wallpaper</li>
+        </ul>
+      </div>
+      <div class="innerServiceImg" id="PaintingImg"></div>
     </div>
-    <div class="innerServiceImg" id="DoorImg"></div>
   </div>
-</div>
-<div class="service" id="option5">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Painting & Staining</h1>
-      <ul>
-        <li>Interior</li>
-        <li>Exterior</li>
-        <li>Drywall repair</li>
-        <li>Wallpaper</li>
-      </ul>
+  <div class="service" id="option6">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Plumbing & Electrical</h1>
+        <ul>
+          <li>Kitchen</li>
+          <li> Bath</li>
+          <li>Septic and Sewer</li>
+          <li>Renovations</li>
+          <li>New Electirical</li>
+          <li>Outlets and Switches</li>
+          <li>Add-on Power Runs</li>
+          <li>Heating</li>
+          <li>Air Conditioning</li>
+          <li>In-floor Heating</li>
+          <li>Water Filtration</li>
+          <li>Water Heater</li>
+          <li>Battery Backup</li>
+        </ul>
+      </div>
+      <div class="innerServiceImg" id="PlumbingImg"></div>
     </div>
-    <div class="innerServiceImg" id="PaintingImg"></div>
   </div>
-</div>
-<div class="service" id="option6">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Plumbing & Electrical</h1>
-      <ul>
-        <li>Kitchen</li>
-        <li> Bath</li>
-        <li>Septic and Sewer</li>
-        <li>Renovations</li>
-        <li>New Electirical</li>
-        <li>Outlets and Switches</li>
-        <li>Add-on Power Runs</li>
-        <li>Heating</li>
-        <li>Air Conditioning</li>
-        <li>In-floor Heating</li>
-		     <li>Water Filtration</li>
-		     <li>Water Heater</li>
-		     <li>Battery Backup</li>
-      </ul>
+  <div class="service" id="option7">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Security Systems and Smart Home</h1>
+        <ul>
+          <li>Indoor and Outdoor</li>
+          <li>Wireless/Wired Security Systems</li>
+          <li>Home Automation</li>
+          <li>Locksmith Services</li>
+          <li>Fire/Smoke/CO2 Detectors</li>
+          <li>Fire Sprinklers</li>
+          <li>Security Lighting </li>
+          <li>Perimeter</li>
+          <li>Privacy Enclosures</li>
+        </ul>
+      </div>
+      <div class="innerServiceImg" id="SecurityImg"></div>
     </div>
-    <div class="innerServiceImg" id="PlumbingImg"></div>
   </div>
-</div>
-<div class="service" id="option7">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Security Systems and Smart Home</h1>
-      <ul>
-        <li>Indoor and Outdoor</li>
-        <li>Wireless/Wired Security Systems</li>
-        <li>Home Automation</li>
-        <li>Locksmith Services</li>
-        <li>Fire/Smoke/CO2 Detectors</li>
-        <li>Fire Sprinklers</li>
-        <li>Security Lighting </li>
-        <li>Perimeter</li>
-        <li>Privacy Enclosures</li>
-      </ul>
+  <div class="service" id="option8">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Audio/Video Solutions</h1>
+        <ul>
+          <li>Television Mounting</li>
+          <li>Home Theater Design </li>
+          <li>Calibration</li>
+          <li>Wall and Ceiling Speaker Install</li>
+          <li>Cable Management</li>
+          <li>Furniture assembly</li>
+          <li>Networked Audio</li>
+          <li>Haul Away</li>
+          <li>Lighting Systems </li>
+        </ul>
+      </div>
+      <div class="innerServiceImg" id="TheaterImg"></div>
     </div>
-    <div class="innerServiceImg" id="SecurityImg"></div>
   </div>
-</div>
-<div class="service" id="option8">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Audio/Video Solutions</h1>
-      <ul>
-        <li>Television Mounting</li>
-        <li>Home Theater Design </li>
-        <li>Calibration</li>
-        <li>Wall and Ceiling Speaker Install</li>
-        <li>Cable Management</li>
-        <li>Furniture assembly</li>
-        <li>Networked Audio</li>
-        <li>Haul Away</li>
-        <li>Lighting Systems </li>
-      </ul>
+  <div class="service" id="option9">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Organization & Cleaning</h1>
+        <ul>
+          <li>Housekeeping </li>
+          <li>Deep Cleaning </li>
+          <li>Duct Work</li>
+          <li>Power Washing</li>
+          <li>Window </li>
+          <li>Gutter </li>
+          <li>Chimney </li>
+          <li>Carpet/Rug </li>
+          <li>Upholstery </li>
+          <li>Natural Stone </li>
+          <li>Grill </li>
+          <li>Wood Reconditioning </li>
+          <li>Professional Organizing </li>
+          <li>COVID-19 Sanitization </li>
+        </ul>
+      </div>
+      <div class="innerServiceImg" id="cleaningImg"></div>
     </div>
-    <div class="innerServiceImg" id="TheaterImg"></div>
   </div>
-</div>
-<div class="service" id="option9">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Organization & Cleaning</h1>
-      <ul>
-        <li>Housekeeping </li>
-        <li>Deep Cleaning </li>
-        <li>Duct Work</li>
-        <li>Power Washing</li>
-        <li>Window </li>
-        <li>Gutter </li>
-        <li>Chimney </li>
-        <li>Carpet/Rug </li>
-        <li>Upholstery </li>
-        <li>Natural Stone </li>
-        <li>Grill </li>
-        <li>Wood Reconditioning </li>
-        <li>Professional Organizing </li>
-        <li>COVID-19 Sanitization </li>
-      </ul>
+  <div class="service" id="option10">
+    <div class="serviceDiv">
+      <div class="innerService">
+        <h1>Landscaping</h1>
+        <ul>
+          <li>Landscape Lighting </li>
+          <li>Arborist Services </li>
+          <li>Fertilizer & Weed Control </li>
+          <li>Drainage Systems </li>
+          <li>Hardscapes </li>
+          <li>Irrigation </li>
+          <li>Mosquito Systems </li>
+          <li>Mowing & Trimming </li>
+          <li>Pest Control </li>
+          <li>Seasonal Color </li>
+          <li>Firewood </li>
+        </ul>
+      </div>
+      <div class="innerServiceImg" id="LandscapingImg">.</div>
     </div>
-    <div class="innerServiceImg" id="cleaningImg"></div>
   </div>
 </div>
-<div class="service" id="option10">
-  <div class="serviceDiv">
-    <div class="innerService">
-      <h1>Landscaping</h1>
-      <ul>
-        <li>Landscape Lighting </li>
-        <li>Arborist Services </li>
-        <li>Fertilizer & Weed Control </li>
-        <li>Drainage Systems </li>
-        <li>Hardscapes </li>
-        <li>Irrigation </li>
-        <li>Mosquito Systems </li>
-        <li>Mowing & Trimming </li>
-        <li>Pest Control </li>
-        <li>Seasonal Color </li>
-        <li>Firewood </li>
-      </ul>
-    </div>
-    <div class="innerServiceImg" id="LandscapingImg">.</div>
-  </div>
+<div id="contactBanner2">
+  <div id="innerContactBanner2">
+    <h2>Need something else?</h2>
+    <a href="HTML/contact-us.html">
+    <button class="btn2">Let's Talk</button>
+    </a> </div>
 </div>
-	<div id="contactBanner2">
-	<div id="innerContactBanner2">
-		<h2>Need something else?</h2>
-		<a href="HTML/contact-us.html"><button class="btn2">Let's Talk</button></a>
-		</div>
-	</div>
 <a href="../HTML/contact-us.html">
 <div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
 </a>
 <div id="footer">
   <div id="footerContainer">
-    <div class="footerCol"> <a href="">
+    <div class="footerCol"> <a href="../HTML/our-services.html">
       <h4>Services</h4>
       </a>
       <ul>
-        <a href="">
+        <a href="../HTML/our-services.html">
         <li>Maintenance/Repair</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Remodeling</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Interior Design</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Doors, Windows, and Siding</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Painting and Staining</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Plumbing and Electrical</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Organization and Cleaning</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Technology/Security</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Landscaping</li>
         </a>
       </ul>
     </div>
-    <div class="footerCol"> <a href="">
+    <div class="footerCol">
       <h4>Our Company</h4>
-      </a>
       <ul>
-        <a href="">
+        <a href="../HTML/our-story.html">
         <li>Our Story</li>
+        </a> <a href="../HTML/testimonials.html">
+        <li>Testimonials</li>
         </a>
       </ul>
-      <a href="">
       <h4>Questions?</h4>
-      </a>
       <ul>
-        <a href="">
+        <a href="../HTML/contact-us.html">
         <li>Contact Us</li>
         </a>
       </ul>
@@ -345,9 +345,10 @@
   </div>
   <div id="connect">
     <h2>Connect With Us:</h2>
-    <img src="../images/fb.png"> <img src="../images/ins.png"> </div>
-  <img id="logo2" src="../images/logo2.png">
-  <p style="color: white" align="center">© Moeller Home Management 2021 / Design by Ryan Coen </p>
+    <a href="https://www.facebook.com/MoellerHomeManagement/"><img alt="fblogo" src="../images/fb.png"></a></div>
+  <a href="../index.html"><img id="logo2" alt="Moeller Home Management Logo" src="../images/logo2.png"></a>
+  <p style="color: white" align="center">© Moeller Home Management 2021 <br>
+    Design by Ryan Coen </p>
 </div>
 </body>
 </html>
