--- a/Moeller/HTML/our-story.html
+++ b/Moeller/HTML/our-story.html
@@ -63,9 +63,9 @@
       <div id="profileDesc">
         <h3>Meet the Owner</h3>
         <h4>Bill Moeller</h4>
-        <p>My passion is helping others.  At Moeller Home Management, I get to live this through being the single point of contact for my clients with regards to all their home and property needs.  I ensure each of my clients is delighted with my prompt and professional service, excellent communication and especially by the highest quality craftsmanship in every project we undertake.<Br><br>
+        <p>My passion is helping others.  At Moeller Home Management, I get to live this through being the single point of contact for my clients with regards to all their home and property needs.  I ensure each of my clients is delighted with my prompt and professional service, excellent communication and especially by the highest quality craftsmanship in every project we undertake.<br><br>
   
-With an extensive background in home remodeling, project management, appliance and home electronic sales and installation, I have worked with some of the finest craftsman in their respective fields and you can count on them to provide the best possible solution for your project.  <Br><br>
+With an extensive background in home remodeling, project management, appliance and home electronic sales and installation, I have worked with some of the finest craftsman in their respective fields and you can count on them to provide the best possible solution for your project.  <br><br>
 
 My goal is to give you complete peace of mind in knowing that you can not only trust me, but you will be able to trust my network of providers as well.  They will not be in your home if I wouldn’t have them in mine.
 </p>
@@ -75,47 +75,55 @@ My goal is to give you complete peace of mind in knowing that you can not only t
 </div>
 <a href="../HTML/contact-us.html"><div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div></a>
 <div id="footer">
-   <div id="footerContainer">
-    <div class="footerCol">
-      <a href=""><h4>Services</h4></a>
+  <div id="footerContainer">
+    <div class="footerCol"> <a href="../HTML/our-services.html">
+      <h4>Services</h4>
+      </a>
       <ul>
-		 <a href="">
+        <a href="../HTML/our-services.html">
         <li>Maintenance/Repair</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Remodeling</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Interior Design</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Doors, Windows, and Siding</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Painting and Staining</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Plumbing and Electrical</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Organization and Cleaning</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Technology/Security</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Landscaping</li>
         </a>
       </ul>
     </div>
     <div class="footerCol">
-       <a href=""><h4>Our Company</h4></a>
+      <h4>Our Company</h4>
       <ul>
-        <a href=""> <li>Our Story</li></a>
+        <a href="../HTML/our-story.html">
+        <li>Our Story</li>
+        </a>
+		   <a href="../HTML/testimonials.html">
+        <li>Testimonials</li>
+        </a>
       </ul>
-       <a href=""><h4>Questions?</h4></a>
+      <h4>Questions?</h4>
       <ul>
-         <a href=""><li>Contact Us</li></a>
+        <a href="../HTML/contact-us.html">
+        <li>Contact Us</li>
+        </a>
       </ul>
     </div>
   </div>
   <div id="connect">
     <h2>Connect With Us:</h2>
-    <img src="../images/fb.png"> <img src="../images/ins.png"> </div>
-  <img id="logo2" src="../images/logo2.png">
-  <p style="color: white" align="center">© Moeller Home Management 2021 / Design by Ryan Coen </p>
+    <a href="https://www.facebook.com/MoellerHomeManagement/"><img alt="fblogo" src="../images/fb.png"></a></div>
+  <a href="../index.html"><img id="logo2" alt="Moeller Home Management Logo" src="../images/logo2.png"></a>
+  <p style="color: white" align="center">© Moeller Home Management 2021 <br> Design by Ryan Coen </p>
 </div>
 </body>
 </html>
