--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -95,47 +95,55 @@ No more wasting countless hours going through lists of providers only to have th
 </div>
 <a href="HTML/contact-us.html"><div id="messageContainer"> <img id="messageIcon" src="images/message.png"> </div></a>
 <div id="footer">
-   <div id="footerContainer">
-    <div class="footerCol">
-      <a href=""><h4>Services</h4></a>
+  <div id="footerContainer">
+    <div class="footerCol"> <a href="HTML/our-services.html">
+      <h4>Services</h4>
+      </a>
       <ul>
-		 <a href="">
+        <a href="HTML/our-services.html">
         <li>Maintenance/Repair</li>
-        </a> <a href="">
+        </a> <a href="HTML/our-services.html">
         <li>Remodeling</li>
-        </a> <a href="">
+        </a> <a href="HTML/our-services.html">
         <li>Interior Design</li>
-        </a> <a href="">
+        </a> <a href="HTML/our-services.html">
         <li>Doors, Windows, and Siding</li>
-        </a> <a href="">
+        </a> <a href="HTML/our-services.html">
         <li>Painting and Staining</li>
-        </a> <a href="">
+        </a> <a href="HTML/our-services.html">
         <li>Plumbing and Electrical</li>
-        </a> <a href="">
+        </a> <a href="HTML/our-services.html">
         <li>Organization and Cleaning</li>
-        </a> <a href="">
+        </a> <a href="HTML/our-services.html">
         <li>Technology/Security</li>
-        </a> <a href="">
+        </a> <a href="HTML/our-services.html">
         <li>Landscaping</li>
         </a>
       </ul>
     </div>
     <div class="footerCol">
-       <a href=""><h4>Our Company</h4></a>
+      <h4>Our Company</h4>
       <ul>
-        <a href=""> <li>Our Story</li></a>
+        <a href="HTML/our-story.html">
+        <li>Our Story</li>
+        </a>
+		   <a href="HTML/testimonials.html">
+        <li>Testimonials</li>
+        </a>
       </ul>
-       <a href=""><h4>Questions?</h4></a>
+      <h4>Questions?</h4>
       <ul>
-         <a href=""><li>Contact Us</li></a>
+        <a href="HTML/contact-us.html">
+        <li>Contact Us</li>
+        </a>
       </ul>
     </div>
   </div>
   <div id="connect">
     <h2>Connect With Us:</h2>
-    <img src="images/fb.png"> <img src="images/ins.png"> </div>
-  <img id="logo2" src="images/logo2.png">
-  <p style="color: white" align="center">© Moeller Home Management 2021/Design by Ryan Coen</p>
+    <a href="https://www.facebook.com/MoellerHomeManagement/"><img alt="fblogo" src="images/fb.png"></a></div>
+  <a href="../index.html"><img id="logo2" alt="Moeller Home Management Logo" src="images/logo2.png"></a>
+  <p style="color: white" align="center">© Moeller Home Management 2021 <br> Design by Ryan Coen </p>
 </div>
 </body>
 </html>
