--- a/Moeller/HTML/contact-us.html
+++ b/Moeller/HTML/contact-us.html
@@ -91,31 +91,34 @@
         <div id="innerForm-group">
           <div class="svcCol">
             <label>
-              <input name="prefer" value="cleaning" type="checkbox" class="input-checkbox"/>
-              Cleaning</label>
+              <input name="prefer" value="remodeling" type="checkbox" class="input-checkbox"/>
+              Remodeling</label>
             <label>
-              <input name="prefer" value="construction" type="checkbox" class="input-checkbox"/>
-              Construction</label>
+              <input name="prefer" value="interiordesign" type="checkbox" class="input-checkbox"/>
+              Interior Design</label>
             <label>
-              <input name="prefer" value="design" type="checkbox" class="input-checkbox"/>
-              Design</label>
+              <input name="prefer" value="doors/windows/siding" type="checkbox" class="input-checkbox"/>
+              Doors, Windows, and Siding</label>
             <label>
-              <input name="prefer" value="installation" type="checkbox" class="input-checkbox"/>
-              Installation</label>
+              <input name="prefer" value="painting/staining" type="checkbox" class="input-checkbox"/>
+              Painting and Staining</label>
             <label>
-              <input name="prefer" value="landscaping" type="checkbox" class="input-checkbox"/>
-              Landscaping</label>
+              <input name="prefer" value="plumbing/electrical" type="checkbox" class="input-checkbox"/>
+              Plumbing and Electrical</label>
           </div>
           <div class="svcCol">
             <label>
               <input name="prefer" value="maintenance/repair" type="checkbox" class="input-checkbox"/>
               Maintenance and Repair</label>
             <label>
-              <input name="prefer" value="security" type="checkbox" class="input-checkbox"/>
-              Security</label>
+              <input name="prefer" value="organization/cleaning" type="checkbox" class="input-checkbox"/>
+              Organization and Cleaning</label>
             <label>
-              <input name="prefer" value="technology" type="checkbox" class="input-checkbox"/>
-              Technology/Smart Home</label>
+              <input name="prefer" value="technology/security" type="checkbox" class="input-checkbox"/>
+              Technology/Security</label>
+			   <label>
+              <input name="prefer" value="landscaping" type="checkbox" class="input-checkbox"/>
+              Landscaping</label>
             <label>
               <input name="prefer" value="other" type="checkbox" class="input-checkbox"/>
               Other <span class="clue">(Specify in comments)</span></label>
@@ -150,47 +153,55 @@
   </div>
 </div>
 <div id="footer">
-   <div id="footerContainer">
-    <div class="footerCol">
-      <a href=""><h4>Services</h4></a>
+  <div id="footerContainer">
+    <div class="footerCol"> <a href="../HTML/our-services.html">
+      <h4>Services</h4>
+      </a>
       <ul>
-		 <a href="">
+        <a href="../HTML/our-services.html">
         <li>Maintenance/Repair</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Remodeling</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Interior Design</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Doors, Windows, and Siding</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Painting and Staining</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Plumbing and Electrical</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Organization and Cleaning</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Technology/Security</li>
-        </a> <a href="">
+        </a> <a href="../HTML/our-services.html">
         <li>Landscaping</li>
         </a>
       </ul>
     </div>
     <div class="footerCol">
-       <a href=""><h4>Our Company</h4></a>
+      <h4>Our Company</h4>
       <ul>
-        <a href=""> <li>Our Story</li></a>
+        <a href="../HTML/our-story.html">
+        <li>Our Story</li>
+        </a>
+		   <a href="../HTML/testimonials.html">
+        <li>Testimonials</li>
+        </a>
       </ul>
-       <a href=""><h4>Questions?</h4></a>
+      <h4>Questions?</h4>
       <ul>
-         <a href=""><li>Contact Us</li></a>
+        <a href="../HTML/contact-us.html">
+        <li>Contact Us</li>
+        </a>
       </ul>
     </div>
   </div>
   <div id="connect">
     <h2>Connect With Us:</h2>
-    <img src="../images/fb.png"> <img src="../images/ins.png"> </div>
-  <img id="logo2" src="../images/logo2.png">
-  <p style="color: white" align="center">© Moeller Home Management 2021 / Design by Ryan Coen </p>
+    <a href="https://www.facebook.com/MoellerHomeManagement/"><img alt="fblogo" src="../images/fb.png"></a></div>
+  <a href="../index.html"><img id="logo2" alt="Moeller Home Management Logo" src="../images/logo2.png"></a>
+  <p style="color: white" align="center">© Moeller Home Management 2021 <br> Design by Ryan Coen </p>
 </div>
 </body>
 </html>
