--- a/Moeller/HTML/testimonials.html
+++ b/Moeller/HTML/testimonials.html
@@ -42,10 +42,22 @@
 </nav>
 <div id="hiddenMenu"></div>
 <div id="mainContainer">
-  <div align="center" id="temp">
-    <h1>Coming soon</h1>
-    <p>Check back soon for updates from our clients</p>
+	  <div id="BannerContainer">
+    <h1>Testimonials</h1>
   </div>
+  <div class="div-one"></div>
+<div id="HPA">
+    <div id="innerHPA">
+      <h2><b>Our Clients Love Us</b></h2>
+      <p>Everything we do is for our clients and we love the feedback they give us. Below are just a few of the thoughts our amazing clients have about us.   </p>
+    </div>
+  </div>
+ <blockquote class="speech-bubble">
+  <p>"I used Moeller Home management for a shower update and Bill did a fantastic job in getting the right people to do the job! Everyone was professional, on time and efficient in all aspects of this job which was challenging. They did a great job and I was so happy with their work and the finished product. I would recommend them for any job you need done."</p>
+  <cite>- Dona C.</cite>
+</blockquote>
+	<h2 align="center">More Coming Soon...</h2>
+	<div class="emptydiv"></div>
 </div>
 <a href="../HTML/contact-us.html">
 <div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
